libs/plugins/core/src/snapshots/plugins_core__building__tests__it_describes_area.snap
---
source: libs/plugins/core/src/building.rs
expression: reply.to_json()?
---
{
  "editor": {
    "body": {
      "acls": {
        "py/object": "",
        "rules": []
      },
      "creator": null,
      "identity": {
        "private": "",
        "public": "",
        "py/object": "",
        "signature": null
      },
      "key": "E-2",
      "klass": {
        "py/type": ""
      },
      "parent": null,
      "props": {
        "map": {
          "gid": {
            "acls": {
              "py/object": "",
              "rules": []
            },
            "py/object": "",
            "value": 3
          },
          "name": {
            "acls": {
              "py/object": "",
              "rules": []
            },
            "py/object": "",
            "value": "Welcome Area"
          }
        },
        "py/object": "model.properties.Common"
      },
      "py/object": "",
      "scopes": {
        "containing": {
          "capacity": null,
          "holding": [
            {
              "gid": 4,
              "key": "E-3",
              "klass": "",
              "name": "Cool Broom",
              "py/object": "model.entity.EntityRef",
              "py/ref": "model.entity.Entity"
            }
          ],
          "produces": {}
        },
        "occupyable": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "occupancy": 0,
          "occupied": [
            {
              "gid": 2,
              "key": "E-1",
              "klass": "",
              "name": "Living",
              "py/object": "model.entity.EntityRef",
              "py/ref": "model.entity.Entity"
            }
          ]
        }
      },
      "version": {
        "i": 2,
        "py/object": ""
      }
    },
    "of": "description"
  }
}
